--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +28,13 @@
     {
      "data": {
       "text/plain": [
-       "array(['Australia', 'Austria', 'Belgium', 'Canada', 'Czech Republic',\n",
-       "       'Denmark', 'Finland', 'France', 'Germany', 'Greece', 'Hungary',\n",
-       "       'Iceland', 'Ireland', 'Italy', 'Japan', 'Korea', 'Luxembourg',\n",
-       "       'Mexico', 'Netherlands', 'New Zealand', 'Norway', 'Poland',\n",
-       "       'Portugal', 'Slovak Republic', 'Spain', 'Sweden', 'Switzerland',\n",
-       "       'Turkey', 'United Kingdom', 'United States', 'Brazil', 'Chile',\n",
-       "       \"China (People's Republic of)\", 'Estonia', 'Indonesia', 'Israel',\n",
-       "       'Russia', 'Slovenia', 'OECD - Total', 'OECD - Europe', 'Colombia',\n",
-       "       'Latvia', 'Costa Rica', 'India', 'Lithuania', 'OECD Asia Oceania',\n",
-       "       'OECD America'], dtype=object)"
+       "array(['MUNICIPAL', 'HOUSEHOLD', 'TREATMENT', 'RECOVERY', 'RECYCLING',\n",
+       "       'INCINERATION_WITH', 'DISPOSAL', 'LANDFILL', 'RECYCLING_SHARE',\n",
+       "       'INC_WITH_SHARE', 'LANDF_SHARE', 'OTHMUN', 'COMPOST', 'OTH_RECOV',\n",
+       "       'INCINERATION_WITHOUT', 'INCINERATION', 'MAT_RECOV_SHARE',\n",
+       "       'COMPST_SHARE', 'INC_WITHOUT_SHARE', 'INC_SHARE', 'OTH_DISP',\n",
+       "       'MW_CAP', 'HOUSE_LIKE', 'BULKY', 'WEEE', 'INDEX2000', 'INDEX1990',\n",
+       "       'DISP_SHARE', 'RECOV_SHARE'], dtype=object)"
       ]
      },
      "execution_count": 4,
@@ -46,7 +43,7 @@
     }
    ],
    "source": [
-    "dfMUNW.Country.unique()"
+    "dfMUNW.VAR.unique()"
    ]
   },
   {
@@ -6370,7 +6367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
