--- a/data.ipynb
+++ b/data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6486,7 +6486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "education.to_parquet(\"education.parquet\")"
+    "#education.to_parquet(\"education.parquet\")"
    ]
   },
   {
@@ -6884,6 +6884,101 @@
    ],
    "source": [
     "#edu.loc[edu['Country Code'] == \"ESP\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "construido = pd.read_csv(\"porcentaje construido.csv\")\n",
+    "construido = construido[construido['COU'].isin(dfMUNW.COU.unique())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "construido.to_parquet(\"construido.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poblacion = pd.read_csv(\"poblacion total.csv\")\n",
+    "poblacion = poblacion[poblacion['LOCATION'].isin(dfMUNW.COU.unique())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poblacion.to_parquet(\"poblacion.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "renta = pd.read_csv(\"renta per capita.csv\")\n",
+    "renta = renta[renta['LOCATION'].isin(dfMUNW.COU.unique())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "renta.to_parquet(\"renta.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "over65 = pd.read_csv(\"Poblacion over 65.csv\")\n",
+    "over65 = over65[over65['COU'].isin(dfMUNW.COU.unique())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "over65.to_parquet(\"over65.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median = pd.read_csv(\"median income.csv\")\n",
+    "median = median[median['LOCATION'].isin(dfMUNW.COU.unique())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median.to_parquet(\"income.parquet\")"
    ]
   },
   {
