--- a/data.ipynb
+++ b/data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6979,6 +6979,34 @@
    "outputs": [],
    "source": [
     "median.to_parquet(\"income.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tourism = pd.read_csv(\"tourism.csv\")\n",
+    "tourism = tourism[tourism['COUNTRY'].isin(dfMUNW.COU.unique())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tourism.to_parquet(\"tourism.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfMUNW.to_parquet(\"waste.parquet\")"
    ]
   },
   {
