area, porcentajes y nuevo notebook

--- a/data.ipynb
+++ b/data.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfMUNW = pd.read_csv(\"MUNW_24122019122952718.csv\")"
+    "dfMUNW = pd.read_parquet(\"waste.parquet\")"
    ]
   },
   {
@@ -10629,6 +10629,216 @@
    ],
    "source": [
     "waste.VAR.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "area = pd.read_csv(\"area.csv\")\n",
+    "area = area[area['COU'].isin(dfMUNW.COU.unique())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "area.to_parquet(\"area.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COU</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>VAR</th>\n",
+       "      <th>Variable</th>\n",
+       "      <th>YEA</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Unit Code</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>PowerCode Code</th>\n",
+       "      <th>PowerCode</th>\n",
+       "      <th>Reference Period Code</th>\n",
+       "      <th>Reference Period</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Flag Codes</th>\n",
+       "      <th>Flags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IND</td>\n",
+       "      <td>India</td>\n",
+       "      <td>FOREST</td>\n",
+       "      <td>Forest</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>KM2</td>\n",
+       "      <td>Square kilometres</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>639390.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>IND</td>\n",
+       "      <td>India</td>\n",
+       "      <td>FOREST</td>\n",
+       "      <td>Forest</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>KM2</td>\n",
+       "      <td>Square kilometres</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>640841.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>IND</td>\n",
+       "      <td>India</td>\n",
+       "      <td>FOREST</td>\n",
+       "      <td>Forest</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>KM2</td>\n",
+       "      <td>Square kilometres</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>642292.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IND</td>\n",
+       "      <td>India</td>\n",
+       "      <td>FOREST</td>\n",
+       "      <td>Forest</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>KM2</td>\n",
+       "      <td>Square kilometres</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>643743.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>IND</td>\n",
+       "      <td>India</td>\n",
+       "      <td>FOREST</td>\n",
+       "      <td>Forest</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>KM2</td>\n",
+       "      <td>Square kilometres</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>645194.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   COU Country     VAR Variable   YEA  Year Unit Code               Unit  \\\n",
+       "0  IND   India  FOREST   Forest  1990  1990       KM2  Square kilometres   \n",
+       "1  IND   India  FOREST   Forest  1991  1991       KM2  Square kilometres   \n",
+       "2  IND   India  FOREST   Forest  1992  1992       KM2  Square kilometres   \n",
+       "3  IND   India  FOREST   Forest  1993  1993       KM2  Square kilometres   \n",
+       "4  IND   India  FOREST   Forest  1994  1994       KM2  Square kilometres   \n",
+       "\n",
+       "   PowerCode Code PowerCode  Reference Period Code  Reference Period  \\\n",
+       "0               0     Units                    NaN               NaN   \n",
+       "1               0     Units                    NaN               NaN   \n",
+       "2               0     Units                    NaN               NaN   \n",
+       "3               0     Units                    NaN               NaN   \n",
+       "4               0     Units                    NaN               NaN   \n",
+       "\n",
+       "      Value Flag Codes Flags  \n",
+       "0  639390.0        NaN   NaN  \n",
+       "1  640841.0        NaN   NaN  \n",
+       "2  642292.0        NaN   NaN  \n",
+       "3  643743.0        NaN   NaN  \n",
+       "4  645194.0        NaN   NaN  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "area.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['FOREST', 'OTHER_P', 'LAND', 'ARABLE_P', 'ARABLE', 'AREA', 'MEAD',\n",
+       "       'MEAD_P', 'OTHER', 'FOREST_P'], dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "area.VAR.unique()"
    ]
   },
   {
