--- a/Experiment 2 -> Gradient Boosting Regressor.ipynb
+++ b/Experiment 2 -> Gradient Boosting Regressor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from catboost import CatBoostRegressor\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -73,63 +74,17 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8941935154126756\n"
+      "0.8201428412040843\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf.fit(X_train, np.ravel(Y1_train))\n",
     "elapsedTime = time.time() - startTime\n",
     "print('{} s'.format(int(elapsedTime)))\n",
     "print(clf.score(X_test, Y1_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 s\n",
-      "0.7635093210398933\n"
-     ]
-    }
-   ],
-   "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
-    "startTime = time.time()\n",
-    "clf.fit(X_train, np.ravel(Y2_train))\n",
-    "elapsedTime = time.time() - startTime\n",
-    "print('{} s'.format(int(elapsedTime)))\n",
-    "print(clf.score(X_test, Y2_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 s\n",
-      "0.825890024264614\n"
-     ]
-    }
-   ],
-   "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
-    "startTime = time.time()\n",
-    "clf.fit(X_train, np.ravel(Y3_train))\n",
-    "elapsedTime = time.time() - startTime\n",
-    "print('{} s'.format(int(elapsedTime)))\n",
-    "print(clf.score(X_test, Y3_test))"
    ]
   },
   {
@@ -142,12 +97,58 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.802877417299758\n"
+      "0.8436122651804864\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf = GradientBoostingRegressor()\n",
+    "startTime = time.time()\n",
+    "clf.fit(X_train, np.ravel(Y2_train))\n",
+    "elapsedTime = time.time() - startTime\n",
+    "print('{} s'.format(int(elapsedTime)))\n",
+    "print(clf.score(X_test, Y2_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 s\n",
+      "0.893954078186609\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = GradientBoostingRegressor()\n",
+    "startTime = time.time()\n",
+    "clf.fit(X_train, np.ravel(Y3_train))\n",
+    "elapsedTime = time.time() - startTime\n",
+    "print('{} s'.format(int(elapsedTime)))\n",
+    "print(clf.score(X_test, Y3_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 s\n",
+      "0.9273579792159962\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf.fit(X_train, np.ravel(Y4_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -165,12 +166,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.8260481219943225\n"
+      "0.9096650670078921\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 5, max_iter=-1)\n",
+    "clf = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf.fit(X_train, np.ravel(Y5_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -188,12 +189,12 @@
      "output_type": "stream",
      "text": [
       "0 s\n",
-      "0.9178831824059016\n"
+      "0.9778256812768346\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "clf = GradientBoostingRegressor()\n",
     "startTime = time.time()\n",
     "clf.fit(X_train, np.ravel(Y6_train))\n",
     "elapsedTime = time.time() - startTime\n",
