--- a/Experiment 3 -> Gaussian Process Regressor.ipynb
+++ b/Experiment 3 -> Gaussian Process Regressor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,15 @@
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from catboost import CatBoostRegressor\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.gaussian_process.kernels import DotProduct, WhiteKernel\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,20 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.8941935154126756\n"
+      "8 s\n",
+      "0.9089119286219004\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf.fit(X_train, np.ravel(Y1_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -88,20 +92,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.7635093210398933\n"
+      "6 s\n",
+      "0.5103996943789195\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf.fit(X_train, np.ravel(Y2_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -111,20 +116,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.825890024264614\n"
+      "8 s\n",
+      "0.8102315339780777\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf.fit(X_train, np.ravel(Y3_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -134,20 +140,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.802877417299758\n"
+      "9 s\n",
+      "0.7416145533155487\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf.fit(X_train, np.ravel(Y4_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -157,20 +164,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.8260481219943225\n"
+      "8 s\n",
+      "0.6968519543443163\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 5, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf.fit(X_train, np.ravel(Y5_train))\n",
     "elapsedTime = time.time() - startTime\n",
@@ -180,20 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 s\n",
-      "0.9178831824059016\n"
+      "8 s\n",
+      "0.7896864873407254\n"
      ]
     }
    ],
    "source": [
-    "clf = svm.SVR(kernel = \"rbf\", C = 1, max_iter=-1)\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "clf = GaussianProcessRegressor(kernel = kernel)\n",
     "startTime = time.time()\n",
     "clf.fit(X_train, np.ravel(Y6_train))\n",
     "elapsedTime = time.time() - startTime\n",
